Revert "Initial derby commit"
This reverts commit f5bb2fe79edbfb96702377d8087e6035e041c2e3.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nko3-breakfast-club",
-  "description": "Breakfast Club",
   "version": "0.0.0",
+  "description": "Breakfast Club",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -11,13 +11,9 @@
     "url": "git@github.com:nko3/breakfast-club.git"
   },
   "dependencies": {
-    "derby": "*",
-    "express": "3.0.0beta4",
-    "gzippo": ">=0.1.7"
   },
   "engines": {
     "node": "0.8.x"
   },
-  "subdomain": "breakfast-club.nko3",
-  "private": true
+  "subdomain": "breakfast-club.nko3"
 }
