--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Breakfast Club",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:nko3/breakfast-club.git"
   },
   "dependencies": {
+    "express": "3.0.0rc5",
+    "ejs": "*",
+    "less-middleware": "*",
+    "socket.io": "0.9"
   },
   "engines": {
     "node": "0.8.x"
