--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nko3-breakfast-club",
-  "version": "0.0.6-6",
+  "version": "0.0.8",
   "description": "LexiCube",
   "main": "app.js",
   "scripts": {
