--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nko3-breakfast-club",
-  "version": "0.0.8",
+  "version": "0.0.8-6",
   "description": "LexiCube",
   "main": "app.js",
   "scripts": {
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "express": "3.0.0rc5",
-    "mongoose": "3.2.0",
     "ejs": "*",
     "less-middleware": "*",
     "socket.io": "0.9",
